force-app/main/default/objects/appirio_core__App_Log__c/appirio_core__App_Log__c.object-meta.xml
<CustomObject>
    <customHelpPage>appirio_core__AppLogHelp</customHelpPage>
    <description>Saves a log of general events that occur during batch processing of billing events and actuals (app logs are not used for any other area of FinancialForce PSA). This may include status and error messages. Administrators can use app logs to track down processing errors.</description>
    <label>App Log</label>
    <nameField>
        <displayFormat>LOG-{YYYYMMDD}-{00000000}</displayFormat>
        <label>Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>