force-app/main/default/objects/appirio_core__App_Log__c/fields/appirio_core__Message__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Message__c</fullName>
    <description>Message to be displayed to user.</description>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>